# teamspeak-who-speaks

./: .gitignore  CMakeLists.txt  README.md  README.txt  adc.c  commons.h  graphics.c  graphics.h  keyboard.c  keyboard.h  main.c  samd21-toolchain.cmake  sleep.c  st7775.c  st7775.h  system_font.h  teamspeak_who_speaks.atsln  teamspeak_who_speaks.componentinfo.xml  teamspeak_who_speaks.cproj  text.c  text.h
Bitmaps/: TS_logo.h  all_bitmaps.h  bitmap_gen.m  bitmaps.h  channel_perm.h  channel_temp.h  default_icon.h  password_icon.h  rssi_0.h  rssi_1.h  rssi_2.h  rssi_3.h  server.h  speak_light_off.h  speak_light_on.h  test.h  user_afk.h  user_mic_bad.h  user_mic_mute.h  user_quite.h  user_sound_mute.h  user_talking.h
Device_Startup/: samd21e17a_flash.ld  samd21e17a_sram.ld  startup_samd21.c
Fonts/: Comic_Sans.h  Comic_Sans_Bold.h
Tools/: BitmapFont.m  bitmapGenerator.m  files2atmelproject.vbs  fontGenerator.m  space2tabs.sh  tab2spaces.sh
at-command-reference/: CMakeLists.txt  main.c
at-command-reference/include/: at.h  config.h.in  socket_at.h  ts3_serverquery.h
at-command-reference/src/: CMakeLists.txt  at.c  main.c  socket_at.c  ts3_serverquery.c
at-command-reference/test/functional/: Makefile
at-command-reference/test/unit/: CMakeLists.txt
at-command-reference/test/unit/at/: test_at.c
at-command-reference/test/unit/ts3-serverquery/: test_ts3_serverquery.c
gui/: gui.h  gui_list.h  gui_popup.c  gui_popup.h  gui_system.h
include/: adc.h  common.h  commons.h  config_unit.h.in  graphics.h  linkedlist.h  st7775.h  stdio_setup.h  tetris.h  text.h  touch.h  uart.h  usb_callback.h
include/ASF/: asf.h
include/ASF/config/: conf_board.h  conf_clocks.h  conf_sleepmgr.h  conf_usb.h
include/bitmaps/: BIG_F.h  TS_logo.h  all_bitmaps.h  block1.h  block2.h  block3.h  block4.h  block5.h  block6.h  block7.h  blocks.h  channel_colapse.h  channel_perm.h  channel_temp.h  icon_default.h  icon_password.h  rssi_1.h  rssi_2.h  rssi_3.h  server.h  user_afk.h  user_mic_bad.h  user_mic_mute.h  user_speaking.h
include/fonts/: Arial.h  Arial_Bold.h  Comic_Sans_Bold.h  Open_Sans.h  Open_Sans_Bold.h  icons.h
include/gui/: gui.h  gui_list.h  gui_popup.h  gui_system.h
src/: CMakeLists.txt  asf.h  graphics.c  linkedlist.c  main.c  st7775.c  st7775_cmd.h  stdio_setup.c  tetris.c  text.c  touch.c  uart.c  usb_callback.c
src/ASF/: CMakeLists.txt
src/ASF/common2/services/delay/sam0/: systick_counter.c
src/ASF/sam0/drivers/port/: port.h
src/ASF/sam0/drivers/system/: system.h
src/ASF/sam0/drivers/system/clock/clock_samd21_r21_da_ha1/: clock.c
src/ASF/sam0/drivers/system/interrupt/: system_interrupt.h
src/ASF/sam0/drivers/system/pinmux/: pinmux.h
src/Config/: conf_clocks.h
src/gui/: gui.c  gui_list.c  gui_popup.c  gui_system.c
test/: CMakeLists.txt
test/unit/linkedlist/: test_linkedlist.c
